--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -31,6 +31,14 @@ on:
         description: 'Git SHA of commit in tenstorrent/tt-mlir'
         required: false
         type: string
+      ngrok_hostname:
+        description: 'Ngrok hostname for reverse shell (e.g., 2.tcp.ngrok.io)'
+        required: false
+        type: string
+      ngrok_port:
+        description: 'Ngrok port for reverse shell (e.g., 16374)'
+        required: false
+        type: string
 
 permissions:
   packages: write
@@ -65,3 +73,5 @@ jobs:
       artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
       wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
+      ngrok_hostname: ${{ inputs.ngrok_hostname }}
+      ngrok_port: ${{ inputs.ngrok_port }}
