--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -15,6 +15,7 @@ on:
           - 'basic-test-nightly.json'
           - 'model-test-push.json'
           - 'model-test-full.json'
+          - 'on-pr.json'
           - 'model-test-passing.json'
           - 'model-test-xfail.json'
           - 'model-test-experimental.json'
