Add test configs for YOLOWorld Model (#2635)
### Ticket
Link to Github Issue - https://github.com/tenstorrent/tt-xla/issues/2170

### Problem description
Add test configs for YOLOWorld Model

### What's changed
Add test configs for YOLOWorld Model

### Checklist
- [x] New/Existing tests provide coverage for changes


### Logs


-[large_640.log](https://github.com/user-attachments/files/24522306/large_640.log)

-[large_1280.log](https://github.com/user-attachments/files/24522307/large_1280.log)

-[medium_640.log](https://github.com/user-attachments/files/24522308/medium_640.log)

-[medium_1280.log](https://github.com/user-attachments/files/24522309/medium_1280.log)

-[small_640.log](https://github.com/user-attachments/files/24522310/small_640.log)

-[small_1280.log](https://github.com/user-attachments/files/24522311/small_1280.log)

-[xlarge_640.log](https://github.com/user-attachments/files/24522313/xlarge_640.log)

--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -619,8 +619,33 @@ test_config:
   bert/sequence_classification/pytorch-textattack/bert-base-uncased-SST-2-single_device-inference:
     status: EXPECTED_PASSING
 
-#  yoloworld/pytorch-single_device-inference:
-#    status: EXPECTED_PASSING
+  yoloworld/pytorch-small_640-single_device-inference:
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2727
+    status: EXPECTED_PASSING
+
+  yoloworld/pytorch-small_1280-single_device-inference:
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2727
+    status: EXPECTED_PASSING
+
+  yoloworld/pytorch-medium_640-single_device-inference:
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2727
+    status: EXPECTED_PASSING
+
+  yoloworld/pytorch-medium_1280-single_device-inference:
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2727
+    status: EXPECTED_PASSING
+
+  yoloworld/pytorch-large_640-single_device-inference:
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2727
+    status: EXPECTED_PASSING
+
+  yoloworld/pytorch-large_1280-single_device-inference:
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2727
+    status: EXPECTED_PASSING
+
+  yoloworld/pytorch-xlarge_640-single_device-inference:
+    assert_pcc: false # https://github.com/tenstorrent/tt-xla/issues/2727
+    status: EXPECTED_PASSING
 
   opt/qa/pytorch-facebook/opt-125m-single_device-inference:
     status: EXPECTED_PASSING
