[CI] Allow for preset jsons to include other jsons (#2773)
### Ticket
No issue, did this quickly after a discussion re metal uplift

### Problem description
Preset naming was confusing
Also I noticed there wasn't a weekly preset for in run tests

### What's changed
Changed generate_test_matrix.py to allow jsons to reference other jsons
with an includes key.
Added a mlir uplift qualification preset, as a json that references
other jsons
Added weekly preset, as a json that references other jsons
Removed handling of `_metadata` keys as we seem to have removed all
jsons that were using it

Changes vibecoded quickly using copilot so please scrutinize thoroughly.

### Checklist
- [ ] New/Existing tests provide coverage for changes

---------

Co-authored-by: Kyle Mabee <118925087+kmabeeTT@users.noreply.github.com>

--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -15,12 +15,15 @@ on:
           - 'basic-test-nightly.json'
           - 'model-test-push.json'
           - 'model-test-full.json'
+          - 'on-pr.json'
           - 'model-test-passing.json'
           - 'model-test-xfail.json'
           - 'model-test-experimental.json'
           - 'model-test-training-xfail-weekly.json'
           - 'model-test-extended.json'
-          - 'basic-test.json:model-test-push.json:model-test-extended.json' # used for uplifts
+          - 'mlir-uplift-qualification.json'
+          - 'model-test-passing-weekly.json'
+          - 'model-test-weekly.json'
           - 'vllm-model-tests.json'
           - 'Custom'
       test_suite_custom:
