--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@
 markers =
     push: marks tests as push, to be executed on PR pipeline
     nightly: marks tests as nightly, to be executed on nightly pipeline
+    notimeout: marks tests that should use a default (240min) timeout instead of calculated duration
     model_test: marks test as model test, to be executed in a separate job in nightly tests
     large: marks model tests as large, to be executed in a separate runner with more resources
     # ModelTestStatus
