--- a/.github/workflows/call-test.yml
+++ b/.github/workflows/call-test.yml
@@ -354,6 +354,15 @@ jobs:
         # If --perf-report-dir is not given, no files will be generated so this ignore is needed to avoid failing the job.
         if-no-files-found: 'ignore'
 
+    # Upload dumped IR files if --dump-irs was used
+    - name: Upload Dumped IR Files
+      uses: actions/upload-artifact@v4
+      if: success() || failure()
+      with:
+        name: dumped-irs-${{ matrix.build.runs-on }}-${{ steps.sanitize.outputs.test_mark }}-${{ steps.fetch-job-id.outputs.job_id }}
+        path: collected_irs/
+        if-no-files-found: 'ignore'
+
 
   test-summary:
     runs-on: ubuntu-latest
