--- a/.github/workflows/schedule-nightly.yml
+++ b/.github/workflows/schedule-nightly.yml
@@ -22,106 +22,186 @@ jobs:
     with:
       docker_image: ${{ needs.build-image.outputs.docker-image }}
 
-  nightly_tests:
-    uses: ./.github/workflows/call-test.yml
-    secrets: inherit
-    needs: [ build-image, build-ttxla ]
-    with:
-      test_suite: basic-test-nightly.json
-      docker_image: ${{ needs.build-image.outputs.docker-image-base }}
-      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
+  # Commented out for testing IR dump workflow
+  # nightly_tests:
+  #   uses: ./.github/workflows/call-test.yml
+  #   secrets: inherit
+  #   needs: [ build-image, build-ttxla ]
+  #   with:
+  #     test_suite: basic-test-nightly.json
+  #     docker_image: ${{ needs.build-image.outputs.docker-image-base }}
+  #     artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+  #     wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
 
-  test_full_model:
+  # test_full_model:
+  #   uses: ./.github/workflows/call-test.yml
+  #   secrets: inherit
+  #   needs: [ build-image, build-ttxla ]
+  #   # This ensures the job runs regardless of success or failure of `nightly_tests`:
+  #   if: success() || failure()
+  #   with:
+  #     test_suite: model-test-full.json
+  #     docker_image: ${{ needs.build-image.outputs.docker-image-base }}
+  #     artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+
+  # # This is a single test job that runs all passing tt-forge-models tests.
+  # test_forge_models_passing:
+  #   uses: ./.github/workflows/call-test.yml
+  #   secrets: inherit
+  #   needs: [ build-image, build-ttxla ]
+  #   # This ensures the job runs regardless of success or failure of `nightly_tests`:
+  #   if: success() || failure()
+  #   with:
+  #     test_suite: model-test-passing.json
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
+  #     artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+
+  # # This is a single test job that runs all xfailing, skipped or placeholder tt-forge-models tests.
+  # test_forge_models_xfail:
+  #   uses: ./.github/workflows/call-test.yml
+  #   secrets: inherit
+  #   needs: [ build-image, build-ttxla ]
+  #   # This ensures the job runs regardless of success or failure of `nightly_tests`:
+  #   if: success() || failure()
+  #   with:
+  #     test_suite: model-test-xfail.json
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
+  #     artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+
+  test_single_model_with_ir_dump:
     uses: ./.github/workflows/call-test.yml
     secrets: inherit
     needs: [ build-image, build-ttxla ]
-    # This ensures the job runs regardless of success or failure of `nightly_tests`:
     if: success() || failure()
     with:
-      test_suite: model-test-full.json
-      docker_image: ${{ needs.build-image.outputs.docker-image-base }}
-      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-
-  # This is a single test job that runs all passing tt-forge-models tests.
-  test_forge_models_passing:
-    uses: ./.github/workflows/call-test.yml
-    secrets: inherit
-    needs: [ build-image, build-ttxla ]
-    # This ensures the job runs regardless of success or failure of `nightly_tests`:
-    if: success() || failure()
-    with:
-      test_suite: model-test-passing.json
+      test_suite: model-test-ir-dump-single.json
       docker_image: ${{ needs.build-image.outputs.docker-image }}
       artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
 
-  # This is a single test job that runs all xfailing, skipped or placeholder tt-forge-models tests.
-  test_forge_models_xfail:
-    uses: ./.github/workflows/call-test.yml
-    secrets: inherit
-    needs: [ build-image, build-ttxla ]
-    # This ensures the job runs regardless of success or failure of `nightly_tests`:
+  process_dumped_irs:
+    runs-on: "tt-ubuntu-2204-n150-stable"
+    needs: [ build-image, build-ttxla, test_single_model_with_ir_dump ]
     if: success() || failure()
-    with:
-      test_suite: model-test-xfail.json
-      docker_image: ${{ needs.build-image.outputs.docker-image }}
-      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+    container:
+      image: harbor.ci.tenstorrent.net/${{ needs.build-image.outputs.docker-image }}
+      options: --device /dev/tenstorrent
+      volumes:
+        - /dev/hugepages:/dev/hugepages
+        - /dev/hugepages-1G:/dev/hugepages-1G
+        - /etc/udev/rules.d:/etc/udev/rules.d
+        - /lib/modules:/lib/modules
+        - /opt/tt_metal_infra/provisioning/provisioning_env:/opt/tt_metal_infra/provisioning/provisioning_env
+        - /mnt/dockercache:/mnt/dockercache
 
-  fail-notify:
-    if: always()
-    needs:
-      - nightly_tests
-      - test_full_model
-      - test_forge_models_passing
-      - test_forge_models_xfail
-      - build-image
-      - build-ttxla
-    runs-on: Ubuntu-latest
-    outputs:
-      is-main: ${{ steps.branch-check.outputs.IS_MAIN }}
-      failed: ${{ steps.check.outputs.failure }}
     steps:
-      - name: Check if branch is main
-        id: branch-check
-        run: echo "IS_MAIN=$(if [ '${{ github.ref }}' == 'refs/heads/main' ]; then echo true; else echo false; fi)" >> $GITHUB_OUTPUT
-      - name: Check if the needed jobs succeeded or failed
-        id: check
-        uses: re-actors/alls-green@release/v1
-        with:
-          jobs: ${{ toJSON(needs) }}
+    - name: Mark repo as safe for git
+      run: |
+        git config --global --add safe.directory /__w/tt-xla/tt-xla
+        git config --global --add safe.directory /__w/tt-xla/tt-xla/third_party/tt_forge_models
 
-  fail-send-msg:
-    if: always()
-    needs:
-      - fail-notify
-    runs-on: Ubuntu-latest
-    steps:
-      - name: Send Fail Notification
-        if: ${{ needs.fail-notify.outputs.failed == 'true' && needs.fail-notify.outputs.is-main == 'true' }}
-        uses: slackapi/slack-github-action@v1.26.0
-        with:
-          payload: |
-            {
-              "text": "Bad bad nightly: <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }}>",
-              "channel": "C08GYB57C8M",
-              "unfurl_links": false, "unfurl_media": false
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_NIGHTLY_FAIL }}
+    - uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
-      - name: Send Success Notification
-        if: ${{ needs.fail-notify.outputs.failed == 'false' && needs.fail-notify.outputs.is-main == 'true' }}
-        uses: slackapi/slack-github-action@v1.26.0
-        with:
-          payload: |
-            {
-              "text": "Good nightly: <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }}>",
-              "channel": "C08GYB57C8M",
-              "unfurl_links": false, "unfurl_media": false
-            }
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_NIGHTLY_SUCCESS }}
+    - name: Download and install wheels
+      shell: bash
+      env:
+        GH_TOKEN: ${{ github.token }}
+      run: |
+        echo "=== Downloading wheels ==="
+        gh run download ${{ needs.build-ttxla.outputs.artifacts_run_id }} \
+          --repo ${{ github.repository }} \
+          --dir wheels \
+          --name ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+        echo "Downloaded wheel files:"
+        ls -la wheels
+
+        echo "=== Installing wheel ==="
+        source venv/activate
+        pip install wheels/*.whl
+
+    - name: Download dumped IRs
+      uses: actions/download-artifact@v4
+      with:
+        pattern: dumped-irs-*
+        path: collected_irs/
+        merge-multiple: true
+
+    - name: Run op-by-op analysis
+      shell: bash
+      run: |
+        source venv/activate
+        pytest -svv tests/op_by_op/op_by_op_test.py::test_op_by_op \
+          --folder=collected_irs \
+          --ir-file-prefix="irs/shlo_compiler" \
+          --json-report \
+          --json-report-file=op_by_op_report.json
+
+    - name: Upload op-by-op report
+      uses: actions/upload-artifact@v4
+      if: success() || failure()
+      with:
+        name: op-by-op-report-${{ github.run_id }}
+        path: op_by_op_report.json
+        if-no-files-found: 'ignore'
+
+  # Commented out for testing IR dump workflow
+  # fail-notify:
+  #   if: always()
+  #   needs:
+  #     # - nightly_tests
+  #     # - test_full_model
+  #     # - test_forge_models_passing
+  #     # - test_forge_models_xfail
+  #     - build-image
+  #     - build-ttxla
+  #   runs-on: Ubuntu-latest
+  #   outputs:
+  #     is-main: ${{ steps.branch-check.outputs.IS_MAIN }}
+  #     failed: ${{ steps.check.outputs.failure }}
+  #   steps:
+  #     - name: Check if branch is main
+  #       id: branch-check
+  #       run: echo "IS_MAIN=$(if [ '${{ github.ref }}' == 'refs/heads/main' ]; then echo true; else echo false; fi)" >> $GITHUB_OUTPUT
+  #     - name: Check if the needed jobs succeeded or failed
+  #       id: check
+  #       uses: re-actors/alls-green@release/v1
+  #       with:
+  #         jobs: ${{ toJSON(needs) }}
+
+  # fail-send-msg:
+  #   if: always()
+  #   needs:
+  #     - fail-notify
+  #   runs-on: Ubuntu-latest
+  #   steps:
+  #     - name: Send Fail Notification
+  #       if: ${{ needs.fail-notify.outputs.failed == 'true' && needs.fail-notify.outputs.is-main == 'true' }}
+  #       uses: slackapi/slack-github-action@v1.26.0
+  #       with:
+  #         payload: |
+  #           {
+  #             "text": "Bad bad nightly: <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }}>",
+  #             "channel": "C08GYB57C8M",
+  #             "unfurl_links": false, "unfurl_media": false
+  #           }
+  #       env:
+  #         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_NIGHTLY_FAIL }}
+
+  #     - name: Send Success Notification
+  #       if: ${{ needs.fail-notify.outputs.failed == 'false' && needs.fail-notify.outputs.is-main == 'true' }}
+  #       uses: slackapi/slack-github-action@v1.26.0
+  #       with:
+  #         payload: |
+  #           {
+  #             "text": "Good nightly: <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }}>",
+  #             "channel": "C08GYB57C8M",
+  #             "unfurl_links": false, "unfurl_media": false
+  #           }
+  #       env:
+  #         SLACK_WEBHOOK_URL: ${{ secrets.SLACK_NIGHTLY_SUCCESS }}
