--- a/.github/workflows/call-test.yml
+++ b/.github/workflows/call-test.yml
@@ -205,7 +205,7 @@ jobs:
         # NOTE: Forked not used for multichip machines until https://github.com/tenstorrent/tt-xla/issues/1824
         # is fixed. This is accomplished by specifically excluding run_forge_models_multichip from the list here.
         PYTEST_FORKED=""
-        for n in run_torch run_large_jax_models run_forge_models run_forge_models_torch run_jax_training run_large_jax_training extended_models run_large_torch_models; do
+        for n in run_torch run_large_jax_models run_forge_models run_forge_models_llm run_forge_models_torch run_jax_training run_large_jax_training extended_models run_large_torch_models; do
           if [[ "${{ matrix.build.name }}" == "$n" ]]; then
             PYTEST_FORKED="--forked"; break
           fi
@@ -263,6 +263,7 @@ jobs:
         source venv/activate
         python -m pytest -vv ./tests/runner/test_models.py::test_all_models_torch --validate-test-config
         python -m pytest -vv ./tests/runner/test_models.py::test_all_models_jax --validate-test-config
+        python -m pytest -vv ./tests/runner/test_models.py::test_llms_torch --validate-test-config
 
     - name: Collect Tests
       id: collect-tests
