--- a/.github/workflows/call-build-release-docker.yml
+++ b/.github/workflows/call-build-release-docker.yml
@@ -11,6 +11,10 @@ on:
         description: 'Artifact name of the wheel'
         type: string
         required: true
+      wheel_version_override:
+        description: 'Wheel version override value'
+        type: string
+        required: true
     outputs:
       docker_image:
         description: 'Built and pushed docker image'
@@ -64,6 +68,11 @@ jobs:
             --name ${{ inputs.wheel_release_artifact_name }}
 
           ls -l
+
+          echo "Renaming the wheel"
+          tag="${{ inputs.wheel_version_override }}"
+
+          .github/scripts/modify_wheel_version.sh *.whl $tag
 
       - name: Build & push Docker image
         shell: bash
