--- a/.github/workflows/call-release-tests.yml
+++ b/.github/workflows/call-release-tests.yml
@@ -9,6 +9,8 @@ on:
         required: true
 
 jobs:
+  # now the tag is better, try again
+  # should work seamlessly
   perf-benchmark:
     uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
     secrets: inherit
@@ -16,3 +18,10 @@ jobs:
       project-filter: tt-xla
       docker-image: ${{ inputs.release_docker_image }}
       ref: main
+
+  demo-tests:
+    uses: tenstorrent/tt-forge/.github/workflows/demo-tests.yml@main
+    secrets: inherit
+    with:
+      docker-image: ${{ inputs.release_docker_image }}
+      project-filter: tt-xla
