--- a/.github/workflows/schedule-nightly.yml
+++ b/.github/workflows/schedule-nightly.yml
@@ -72,14 +72,26 @@ jobs:
       artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
 
-  # todo(vvukoman): pack only the pjrt_plugin_tt whl or vllm whl as well?
-  # not tested - docker image create
-  build-release-docker:
-    uses: ./.github/workflows/call-build-release-docker.yml
+  publish-release-wheel:
+    uses: ./.github/workflows/call-publish-release-wheel.yml
     secrets: inherit
+    needs: [ build-ttxla ]
     with:
       wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+      is_nightly_release: true
+
+  # todo(vvukoman): pack only the pjrt_plugin_tt whl or vllm whl as well?
+  # tested - docker image create (also used image in perf tests)
+  build-release-docker:
+    uses: ./.github/workflows/call-build-release-docker.yml
+    secrets: inherit
+    needs: [ build-ttxla, publish-release-wheel ]
+    # needs: [ test_shield_models ]
+    with:
+      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
+      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
+      wheel_version_override: ${{ needs.publish-release-wheel.outputs.release_tag }}
 
   # not tested - perf & demo tests
   release-tests:
@@ -89,15 +101,6 @@ jobs:
     with:
       release_docker_image: ${{ needs.build-release-docker.outputs.docker_image }}
 
-  publish-release-wheel:
-    uses: ./.github/workflows/call-publish-release-wheel.yml
-    secrets: inherit
-    # needs: [ test_shield_models ]
-    with:
-      wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-      is_nigthly_release: true
-
   # tested - tag push, github release push
   # not tested - docker image additional tags push
   publish-release:
@@ -106,8 +109,8 @@ jobs:
     needs: [ publish-release-wheel, build-release-docker, release-tests ]
     with:
       release_tag: ${{ needs.publish-release-wheel.outputs.release_tag }}
-      is_nigthly_release: true
       docker_image_base: ${{ needs.build-release-docker.outputs.docker_image_base }}
+      is_nightly_release: true
 
   # todo(vvukoman): github release, git tag, add tags to Docker image (latests and release tags)
   # before it had only a commit hash tag
