make distinct uplift labels

--- a/.github/workflows/schedule-uplift-forge-models.yml
+++ b/.github/workflows/schedule-uplift-forge-models.yml
@@ -63,7 +63,7 @@ jobs:
           commit-message: "Uplift ${{ env.TT_FORGE_MODELS_SUBMODULE_PATH }} to ${{ steps.set-env-variables.outputs.LATEST_TT_FORGE_MODELS_VERSION }} ${{ env.TODAY }}"
           title: "Uplift ${{ env.TT_FORGE_MODELS_SUBMODULE_PATH }} to ${{ steps.set-env-variables.outputs.LATEST_TT_FORGE_MODELS_VERSION }} ${{ env.TODAY }}"
           body: "This PR uplifts the ${{ env.TT_FORGE_MODELS_SUBMODULE_PATH }} to the ${{ steps.set-env-variables.outputs.LATEST_TT_FORGE_MODELS_VERSION }}"
-          labels: uplift,forge-models
+          labels: uplift-forge-models
           delete-branch: true
           token: ${{ secrets.GH_TOKEN }}
 
