--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -35,7 +35,7 @@ jobs:
     with:
       wheel_release_artifact_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
       wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-      wheel_version_override: dev22220114
+      wheel_version_override: ${{ inputs.release_tag }}
 
   perf-benchmark:
     uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
