--- a/.github/workflows/manual-benchmark.yml
+++ b/.github/workflows/manual-benchmark.yml
@@ -63,12 +63,12 @@ jobs:
           fi
   perf-benchmark:
     needs: [ set-inputs, build ]
-    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
+    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/check-versions
     secrets: inherit
     with:
         project: tt-xla
         run_id: ${{ needs.build.outputs.artifacts_run_id }}
         run_id_source: tt-xla
-        ref: ${{ needs.set-inputs.outputs.ref }}
+        ref: vvukoman/check-versions
         test-filter: ${{ inputs.test_filter }}
         sh-runner: ${{ inputs.sh-runner }}
